Creadted Artist, Album and Song DTOs. GetAllSongs endpoint and api are created
